--- a/git/windowchef/file/ipc.h.html
+++ b/git/windowchef/file/ipc.h.html
@@ -15,7 +15,7 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> ipc.h (831B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> ipc.h (947B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -62,6 +62,12 @@
 <a href="#l44" id="l44">44</a>
 <a href="#l45" id="l45">45</a>
 <a href="#l46" id="l46">46</a>
+<a href="#l47" id="l47">47</a>
+<a href="#l48" id="l48">48</a>
+<a href="#l49" id="l49">49</a>
+<a href="#l50" id="l50">50</a>
+<a href="#l51" id="l51">51</a>
+<a href="#l52" id="l52">52</a>
 </pre></td><td><pre>
 /* See the LICENSE file for copyright and license details. */
 
@@ -86,13 +92,18 @@ enum IPCCommand {
 	IPCWindowSnap,
 	IPCWindowCycle,
 	IPCWindowRevCycle,
+	IPCWindowCycleInGroup,
+	IPCWindowRevCycleInGroup,
+	IPCWindowFocus,
 	IPCGroupAddWindow,
 	IPCGroupRemoveWindow,
 	IPCGroupActivate,
 	IPCGroupDeactivate,
 	IPCGroupToggle,
+	IPCMouseStart,
+	IPCMouseStop,
+	IPCMouseToggle,
 	IPCWMQuit,
-	IPCWMChangeNrOfGroups,
 	IPCWMConfig,
 	NR_IPC_COMMANDS
 };
@@ -102,6 +113,7 @@ enum IPCConfig {
 	IPCConfigColorFocused,
 	IPCConfigColorUnfocused,
 	IPCConfigGapWidth,
+	IPCConfigGridGapWidth,
 	IPCConfigCursorPosition,
 	IPCConfigGroupsNr,
 	IPCConfigEnableSloppyFocus,
