--- a/git/windowchef/file/man/waitron.1.html.html
+++ b/git/windowchef/file/man/waitron.1.html.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a> | <a href="../../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> waitron.1.html (9514B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> waitron.1.html (11001B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -197,6 +197,18 @@
 <a href="#l179" id="l179">179</a>
 <a href="#l180" id="l180">180</a>
 <a href="#l181" id="l181">181</a>
+<a href="#l182" id="l182">182</a>
+<a href="#l183" id="l183">183</a>
+<a href="#l184" id="l184">184</a>
+<a href="#l185" id="l185">185</a>
+<a href="#l186" id="l186">186</a>
+<a href="#l187" id="l187">187</a>
+<a href="#l188" id="l188">188</a>
+<a href="#l189" id="l189">189</a>
+<a href="#l190" id="l190">190</a>
+<a href="#l191" id="l191">191</a>
+<a href="#l192" id="l192">192</a>
+<a href="#l193" id="l193">193</a>
 </pre></td><td><pre>
 &lt;!DOCTYPE html&gt;
 &lt;html&gt;
@@ -299,6 +311,7 @@ anything on &lt;code&gt;stdout&lt;/code&gt;.&lt;/p&gt;
 &lt;dt class=&quot;flush&quot;&gt;&lt;code&gt;BOOL&lt;/code&gt;&lt;/dt&gt;&lt;dd&gt;&lt;p&gt;  true values: &lt;code&gt;true&lt;/code&gt; | &lt;code&gt;t&lt;/code&gt; | &lt;code&gt;yes&lt;/code&gt; | &lt;code&gt;y&lt;/code&gt; | &lt;code&gt;1&lt;/code&gt;&lt;/p&gt;
 
 &lt;p&gt;  false values: &lt;code&gt;false&lt;/code&gt; | &lt;code&gt;f&lt;/code&gt; | &lt;code&gt;no&lt;/code&gt; | &lt;code&gt;n&lt;/code&gt; | &lt;code&gt;0&lt;/code&gt;&lt;/p&gt;&lt;/dd&gt;
+&lt;dt class=&quot;flush&quot;&gt;&lt;code&gt;MOUSE&lt;/code&gt;&lt;/dt&gt;&lt;dd&gt;&lt;p&gt;  move | resize&lt;/p&gt;&lt;/dd&gt;
 &lt;/dl&gt;
 
 
@@ -321,10 +334,17 @@ anything on &lt;code&gt;stdout&lt;/code&gt;.&lt;/p&gt;
 &lt;dt&gt;&lt;code&gt;window_close&lt;/code&gt;&lt;/dt&gt;&lt;dd&gt;&lt;p&gt;  Closes the focused window.&lt;/p&gt;&lt;/dd&gt;
 &lt;dt&gt;&lt;code&gt;window_put_in_grid&lt;/code&gt; &lt;var&gt;grid_width&lt;/var&gt; &lt;var&gt;grid_height&lt;/var&gt; &lt;var&gt;cell_x&lt;/var&gt; &lt;var&gt;cell_y&lt;/var&gt;&lt;/dt&gt;&lt;dd&gt;&lt;p&gt;  Moves and resizes the focused windows accordingly to fit in a cell defined
   by the &lt;var&gt;cell_x&lt;/var&gt; and &lt;var&gt;cell_y&lt;/var&gt; coordinates in a virtual grid with width
-  &lt;var&gt;grid_width&lt;/var&gt; and height &lt;var&gt;grid_height&lt;/var&gt; on the current monitor.&lt;/p&gt;&lt;/dd&gt;
+  &lt;var&gt;grid_width&lt;/var&gt; and height &lt;var&gt;grid_height&lt;/var&gt; on the current monitor.
+  Gaps around the windows in the grid can be added along with monitor gaps.&lt;/p&gt;&lt;/dd&gt;
 &lt;dt&gt;&lt;code&gt;window_snap&lt;/code&gt; &lt;var&gt;POSITION&lt;/var&gt;&lt;/dt&gt;&lt;dd&gt;&lt;p&gt;  Snap the window on the screen in a position defined by &lt;var&gt;POSITION&lt;/var&gt;.&lt;/p&gt;&lt;/dd&gt;
 &lt;dt&gt;&lt;code&gt;window_cycle&lt;/code&gt;&lt;/dt&gt;&lt;dd&gt;&lt;p&gt;  Cycle through mapped windows.&lt;/p&gt;&lt;/dd&gt;
 &lt;dt&gt;&lt;code&gt;window_rev_cycle&lt;/code&gt;&lt;/dt&gt;&lt;dd&gt;&lt;p&gt;  Reverse cycle through mapped windows.&lt;/p&gt;&lt;/dd&gt;
+&lt;dt&gt;&lt;code&gt;window_cycle_in_group&lt;/code&gt;&lt;/dt&gt;&lt;dd&gt;&lt;p&gt;  Cycle trough mapped windows that belong to the same group as the
+  focused window.&lt;/p&gt;&lt;/dd&gt;
+&lt;dt&gt;&lt;code&gt;window_rev_cycle_in_group&lt;/code&gt;&lt;/dt&gt;&lt;dd&gt;&lt;p&gt;  Reverse cycle through mapped windows that belong to the same group as the
+  focused window.&lt;/p&gt;&lt;/dd&gt;
+&lt;dt&gt;&lt;code&gt;window_focus&lt;/code&gt; &lt;var&gt;id&lt;/var&gt;&lt;/dt&gt;&lt;dd&gt;&lt;p&gt;  Focus window by &lt;var&gt;id&lt;/var&gt;. The &lt;var&gt;id&lt;/var&gt; can be found using &lt;span class=&quot;man-ref&quot;&gt;pfw&lt;span class=&quot;s&quot;&gt;(1)&lt;/span&gt;&lt;/span&gt; or &lt;span class=&quot;man-ref&quot;&gt;lsw&lt;span class=&quot;s&quot;&gt;(1)&lt;/span&gt;&lt;/span&gt; from
+  &lt;a href=&quot;https://github.com/wmutils/core/&quot;&gt;wmutils&lt;/a&gt;.&lt;/p&gt;&lt;/dd&gt;
 &lt;dt&gt;&lt;code&gt;group_add_window&lt;/code&gt; &lt;var&gt;group_nr&lt;/var&gt;&lt;/dt&gt;&lt;dd&gt;&lt;p&gt;  Add the focused window to the &lt;var&gt;group_nr&lt;/var&gt; group.&lt;/p&gt;
 
 &lt;p&gt;  Group numbers start from 0 and end at &lt;var&gt;GROUPS_NO&lt;/var&gt; - 1.&lt;/p&gt;&lt;/dd&gt;
@@ -332,6 +352,9 @@ anything on &lt;code&gt;stdout&lt;/code&gt;.&lt;/p&gt;
 &lt;dt&gt;&lt;code&gt;group_activate&lt;/code&gt; &lt;var&gt;group_nr&lt;/var&gt;&lt;/dt&gt;&lt;dd&gt;&lt;p&gt;  Map all windows that belong to the &lt;var&gt;group_nr&lt;/var&gt; group.&lt;/p&gt;&lt;/dd&gt;
 &lt;dt&gt;&lt;code&gt;group_deactivate&lt;/code&gt; &lt;var&gt;group_nr&lt;/var&gt;&lt;/dt&gt;&lt;dd&gt;&lt;p&gt;  Unmap all windows that belong to the &lt;var&gt;group_nr&lt;/var&gt; group.&lt;/p&gt;&lt;/dd&gt;
 &lt;dt&gt;&lt;code&gt;group_toggle&lt;/code&gt; &lt;var&gt;group_nr&lt;/var&gt;&lt;/dt&gt;&lt;dd&gt;&lt;p&gt;  Toggle the &lt;var&gt;group_nr&lt;/var&gt; group.&lt;/p&gt;&lt;/dd&gt;
+&lt;dt&gt;&lt;code&gt;mouse_start&lt;/code&gt; &lt;var&gt;MOUSE&lt;/var&gt;&lt;/dt&gt;&lt;dd&gt;&lt;p&gt;  Start tracking the pointer to move/resize the mouse.&lt;/p&gt;&lt;/dd&gt;
+&lt;dt&gt;&lt;code&gt;mouse_stop&lt;/code&gt;&lt;/dt&gt;&lt;dd&gt;&lt;p&gt;  Stop tracking the pointer.&lt;/p&gt;&lt;/dd&gt;
+&lt;dt&gt;&lt;code&gt;mouse_toggle&lt;/code&gt; &lt;var&gt;MOUSE&lt;/var&gt;&lt;/dt&gt;&lt;dd&gt;&lt;p&gt;  If already tracking, stop. Else, track.&lt;/p&gt;&lt;/dd&gt;
 &lt;dt&gt;&lt;code&gt;wm_quit&lt;/code&gt; &lt;var&gt;exit_status&lt;/var&gt;&lt;/dt&gt;&lt;dd&gt;&lt;p&gt;  Quit windowchef with exit_status &lt;var&gt;exit_status&lt;/var&gt;.&lt;/p&gt;&lt;/dd&gt;
 &lt;dt&gt;&lt;code&gt;wm_change_number_of_groups&lt;/code&gt; &lt;var&gt;number_of_groups&lt;/var&gt;&lt;/dt&gt;&lt;dd&gt;&lt;p&gt;  Change the number of maximum groups to &lt;var&gt;number_of_groups&lt;/var&gt;.&lt;/p&gt;
 
@@ -351,9 +374,10 @@ are:&lt;/p&gt;
 &lt;dt&gt;&lt;code&gt;color_focused&lt;/code&gt;, &lt;code&gt;color_unfocused&lt;/code&gt; &lt;var&gt;color&lt;/var&gt;&lt;/dt&gt;&lt;dd&gt;&lt;p&gt;  Sets the border color to &lt;var&gt;color&lt;/var&gt; for the focused and unfocused state respectively.
   &lt;var&gt;color&lt;/var&gt; is a hexadecimal value that may or may not start witht he &lt;code&gt;0x&lt;/code&gt;
   prefix. Example: &lt;code&gt;0x1234ef&lt;/code&gt;.&lt;/p&gt;&lt;/dd&gt;
-&lt;dt&gt;&lt;code&gt;gap_width&lt;/code&gt; &lt;var&gt;width&lt;/var&gt;&lt;/dt&gt;&lt;dd&gt;&lt;p&gt;  Sets the window gap value to &lt;var&gt;width&lt;/var&gt;.&lt;/p&gt;&lt;/dd&gt;
-&lt;dt&gt;&lt;code&gt;cursor_position&lt;/code&gt; &lt;var&gt;POSITION&lt;/var&gt;&lt;/dt&gt;&lt;dd&gt;&lt;p&gt;  Sets the position of the cursor when moving or resizing windows. Possible
-  values for &lt;var&gt;pos&lt;/var&gt; are:&lt;/p&gt;&lt;/dd&gt;
+&lt;dt&gt;&lt;code&gt;gap_width&lt;/code&gt; &lt;var&gt;POSITION&lt;/var&gt; &lt;var&gt;width&lt;/var&gt;&lt;/dt&gt;&lt;dd&gt;&lt;p&gt;  Sets the window gap at &lt;var&gt;POSITION&lt;/var&gt; to &lt;var&gt;width&lt;/var&gt;. &lt;var&gt;POSITION&lt;/var&gt; can be equal to
+  &lt;code&gt;all&lt;/code&gt; to set all gaps to &lt;var&gt;POSITION&lt;/var&gt;.&lt;/p&gt;&lt;/dd&gt;
+&lt;dt&gt;&lt;code&gt;grid_gap_width&lt;/code&gt; &lt;var&gt;width&lt;/var&gt;&lt;/dt&gt;&lt;dd&gt;&lt;p&gt;  Sets the window gap value used in virtual grids to &lt;var&gt;width&lt;/var&gt;.&lt;/p&gt;&lt;/dd&gt;
+&lt;dt&gt;&lt;code&gt;cursor_position&lt;/code&gt; &lt;var&gt;POSITION&lt;/var&gt;&lt;/dt&gt;&lt;dd&gt;&lt;p&gt;  Sets the position of the cursor when moving or resizing windows.&lt;/p&gt;&lt;/dd&gt;
 &lt;dt&gt;&lt;code&gt;groups_nr&lt;/code&gt; &lt;var&gt;nr&lt;/var&gt;&lt;/dt&gt;&lt;dd&gt;&lt;p&gt;  Sets the number of groups to &lt;var&gt;nr&lt;/var&gt;. If &lt;var&gt;nr&lt;/var&gt; is less than the current number
   of groups, window that belong to groups whose numbers are greater than &lt;var&gt;nr&lt;/var&gt;
   will be mapped to screen and assigned to the null group.&lt;/p&gt;&lt;/dd&gt;
@@ -363,7 +387,7 @@ are:&lt;/p&gt;
 
 &lt;h2 id=&quot;SEE-ALSO&quot;&gt;SEE ALSO&lt;/h2&gt;
 
-&lt;p&gt;&lt;span class=&quot;man-ref&quot;&gt;windowchef&lt;span class=&quot;s&quot;&gt;(1)&lt;/span&gt;&lt;/span&gt;, &lt;span class=&quot;man-ref&quot;&gt;sxhkd&lt;span class=&quot;s&quot;&gt;(1)&lt;/span&gt;&lt;/span&gt;&lt;/p&gt;
+&lt;p&gt;&lt;span class=&quot;man-ref&quot;&gt;windowchef&lt;span class=&quot;s&quot;&gt;(1)&lt;/span&gt;&lt;/span&gt;, &lt;span class=&quot;man-ref&quot;&gt;sxhkd&lt;span class=&quot;s&quot;&gt;(1)&lt;/span&gt;&lt;/span&gt;, &lt;span class=&quot;man-ref&quot;&gt;wmutils&lt;span class=&quot;s&quot;&gt;(1)&lt;/span&gt;&lt;/span&gt;, &lt;span class=&quot;man-ref&quot;&gt;pfw&lt;span class=&quot;s&quot;&gt;(1)&lt;/span&gt;&lt;/span&gt;, &lt;span class=&quot;man-ref&quot;&gt;lsw&lt;span class=&quot;s&quot;&gt;(1)&lt;/span&gt;&lt;/span&gt;&lt;/p&gt;
 
 &lt;h2 id=&quot;AUTHOR&quot;&gt;AUTHOR&lt;/h2&gt;
 
@@ -372,7 +396,7 @@ are:&lt;/p&gt;
 
   &lt;ol class=&apos;man-decor man-foot man foot&apos;&gt;
     &lt;li class=&apos;tl&apos;&gt;&lt;/li&gt;
-    &lt;li class=&apos;tc&apos;&gt;September 2016&lt;/li&gt;
+    &lt;li class=&apos;tc&apos;&gt;October 2016&lt;/li&gt;
     &lt;li class=&apos;tr&apos;&gt;waitron(1)&lt;/li&gt;
   &lt;/ol&gt;
 
