--- a/git/windowchef/file/windowchefrc.html
+++ b/git/windowchef/file/windowchefrc.html
@@ -15,7 +15,7 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> windowchefrc (273B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> windowchefrc (291B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -28,13 +28,13 @@
 </pre></td><td><pre>
 #!/bin/sh
 
-waitron wm_config border_width 5
-waitron wm_config color_focused 0x97a293
-waitron wm_config color_unfocused 0x393638
-waitron wm_config gap_width 20
-waitron wm_config cursor_position middle
-waitron wm_config groups_nr 4
-waitron wm_config enable_sloppy_focus true
+./waitron wm_config border_width 5
+./waitron wm_config color_focused 0x97a293
+./waitron wm_config color_unfocused 0x393638
+./waitron wm_config gap_width all 20
+./waitron wm_config cursor_position middle
+./waitron wm_config groups_nr 4
+./waitron wm_config enable_sloppy_focus true
 </pre></td></tr></table>
 </div>
 </body>
