--- a/git/windowchef/file/xephyr.sh.html
+++ b/git/windowchef/file/xephyr.sh.html
@@ -15,7 +15,7 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> xephyr.sh (118B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> xephyr.sh (134B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -36,7 +36,7 @@ sleep 1
 
 export DISPLAY=:$D
 sxhkd -c .sxhkdrc &amp;
-exec ./windowchef
+exec ./windowchef -c windowchefrc
 </pre></td></tr></table>
 </div>
 </body>
