--- a/git/windowchef/file/config.h.html
+++ b/git/windowchef/file/config.h.html
@@ -15,7 +15,7 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> config.h (657B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> config.h (682B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -36,6 +36,13 @@
 <a href="#l18" id="l18">18</a>
 <a href="#l19" id="l19">19</a>
 <a href="#l20" id="l20">20</a>
+<a href="#l21" id="l21">21</a>
+<a href="#l22" id="l22">22</a>
+<a href="#l23" id="l23">23</a>
+<a href="#l24" id="l24">24</a>
+<a href="#l25" id="l25">25</a>
+<a href="#l26" id="l26">26</a>
+<a href="#l27" id="l27">27</a>
 </pre></td><td><pre>
 /* See the LICENSE file for copyright and license details. */
 
@@ -43,16 +50,23 @@
 #define _CONFIG_H
 
 #define BORDER_WIDTH 5
+
 /* colors are HTML colors that start in &quot;0x&quot; instead of &quot;#&quot; */
 #define COLOR_FOCUS 0x97a293
 #define COLOR_UNFOCUS 0x393638
+
 /* gap between the window and the edge of the monitor
  * when snapping or vertically/horizontally maximizing window */
-#define GAP 20
+#define GAP 0
+
+#define GRID_GAP 0
+
 /* where to place the cursor when moving/resizing the window */
 #define CURSOR_POSITION CENTER
+
 /* number of starting groups, can be modified with waitron at run-time */
-#define GROUPS 4
+#define GROUPS 10
+
 /* focus windows after hovering them with the pointer */
 #define SLOPPY_FOCUS true
 
