--- a/git/windowchef/file/man/Makefile.html
+++ b/git/windowchef/file/man/Makefile.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a> | <a href="../../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> Makefile (377B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> Makefile (384B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -42,6 +42,8 @@
 <a href="#l24" id="l24">24</a>
 <a href="#l25" id="l25">25</a>
 <a href="#l26" id="l26">26</a>
+<a href="#l27" id="l27">27</a>
+<a href="#l28" id="l28">28</a>
 </pre></td><td><pre>
 include ../config.mk
 
@@ -51,7 +53,9 @@ MANUAL = &quot;Windowchef Manual&quot;
 
 .POSIX:
 
-all: $(MAN)
+all: build
+
+build: $(MAN)
 
 %.1: *.1.md
 	ronn --manual=$(MANUAL) $@.md
@@ -60,7 +64,7 @@ clean:
 	rm *.1
 	rm *.1.html
 
-install: $(MAN)
+install:
 	mkdir -p $(DESTDIR)$(MANDIR)/
 	cp -f $(MAN) $(DESTDIR)$(MANDIR)/
 
