--- a/git/windowchef/file/man/waitron.1.html
+++ b/git/windowchef/file/man/waitron.1.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a> | <a href="../../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> waitron.1 (4683B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> waitron.1 (5619B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -169,11 +169,43 @@
 <a href="#l151" id="l151">151</a>
 <a href="#l152" id="l152">152</a>
 <a href="#l153" id="l153">153</a>
+<a href="#l154" id="l154">154</a>
+<a href="#l155" id="l155">155</a>
+<a href="#l156" id="l156">156</a>
+<a href="#l157" id="l157">157</a>
+<a href="#l158" id="l158">158</a>
+<a href="#l159" id="l159">159</a>
+<a href="#l160" id="l160">160</a>
+<a href="#l161" id="l161">161</a>
+<a href="#l162" id="l162">162</a>
+<a href="#l163" id="l163">163</a>
+<a href="#l164" id="l164">164</a>
+<a href="#l165" id="l165">165</a>
+<a href="#l166" id="l166">166</a>
+<a href="#l167" id="l167">167</a>
+<a href="#l168" id="l168">168</a>
+<a href="#l169" id="l169">169</a>
+<a href="#l170" id="l170">170</a>
+<a href="#l171" id="l171">171</a>
+<a href="#l172" id="l172">172</a>
+<a href="#l173" id="l173">173</a>
+<a href="#l174" id="l174">174</a>
+<a href="#l175" id="l175">175</a>
+<a href="#l176" id="l176">176</a>
+<a href="#l177" id="l177">177</a>
+<a href="#l178" id="l178">178</a>
+<a href="#l179" id="l179">179</a>
+<a href="#l180" id="l180">180</a>
+<a href="#l181" id="l181">181</a>
+<a href="#l182" id="l182">182</a>
+<a href="#l183" id="l183">183</a>
+<a href="#l184" id="l184">184</a>
+<a href="#l185" id="l185">185</a>
 </pre></td><td><pre>
 .\&quot; generated with Ronn/v0.7.3
 .\&quot; http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH &quot;WAITRON&quot; &quot;1&quot; &quot;September 2016&quot; &quot;&quot; &quot;Windowchef Manual&quot;
+.TH &quot;WAITRON&quot; &quot;1&quot; &quot;October 2016&quot; &quot;&quot; &quot;Windowchef Manual&quot;
 .
 .SH &quot;NAME&quot;
 \fBwaitron\fR \- A client for windowchef(1)
@@ -202,6 +234,10 @@ true values: \fBtrue\fR | \fBt\fR | \fByes\fR | \fBy\fR | \fB1\fR
 .
 .IP
 false values: \fBfalse\fR | \fBf\fR | \fBno\fR | \fBn\fR | \fB0\fR
+.
+.TP
+\fBMOUSE\fR
+move | resize
 .
 .SH &quot;COMMANDS&quot;
 .
@@ -239,7 +275,7 @@ Closes the focused window\.
 .
 .TP
 \fBwindow_put_in_grid\fR \fIgrid_width\fR \fIgrid_height\fR \fIcell_x\fR \fIcell_y\fR
-Moves and resizes the focused windows accordingly to fit in a cell defined by the \fIcell_x\fR and \fIcell_y\fR coordinates in a virtual grid with width \fIgrid_width\fR and height \fIgrid_height\fR on the current monitor\.
+Moves and resizes the focused windows accordingly to fit in a cell defined by the \fIcell_x\fR and \fIcell_y\fR coordinates in a virtual grid with width \fIgrid_width\fR and height \fIgrid_height\fR on the current monitor\. Gaps around the windows in the grid can be added along with monitor gaps\.
 .
 .TP
 \fBwindow_snap\fR \fIPOSITION\fR
@@ -252,6 +288,18 @@ Cycle through mapped windows\.
 .TP
 \fBwindow_rev_cycle\fR
 Reverse cycle through mapped windows\.
+.
+.TP
+\fBwindow_cycle_in_group\fR
+Cycle trough mapped windows that belong to the same group as the focused window\.
+.
+.TP
+\fBwindow_rev_cycle_in_group\fR
+Reverse cycle through mapped windows that belong to the same group as the focused window\.
+.
+.TP
+\fBwindow_focus\fR \fIid\fR
+Focus window by \fIid\fR\. The \fIid\fR can be found using pfw(1) or lsw(1) from wmutils \fIhttps://github\.com/wmutils/core/\fR\.
 .
 .TP
 \fBgroup_add_window\fR \fIgroup_nr\fR
@@ -275,6 +323,18 @@ Unmap all windows that belong to the \fIgroup_nr\fR group\.
 .TP
 \fBgroup_toggle\fR \fIgroup_nr\fR
 Toggle the \fIgroup_nr\fR group\.
+.
+.TP
+\fBmouse_start\fR \fIMOUSE\fR
+Start tracking the pointer to move/resize the mouse\.
+.
+.TP
+\fBmouse_stop\fR
+Stop tracking the pointer\.
+.
+.TP
+\fBmouse_toggle\fR \fIMOUSE\fR
+If already tracking, stop\. Else, track\.
 .
 .TP
 \fBwm_quit\fR \fIexit_status\fR
@@ -303,12 +363,16 @@ Sets the border width to \fIwidth\fR pixels\.
 Sets the border color to \fIcolor\fR for the focused and unfocused state respectively\. \fIcolor\fR is a hexadecimal value that may or may not start witht he \fB0x\fR prefix\. Example: \fB0x1234ef\fR\.
 .
 .TP
-\fBgap_width\fR \fIwidth\fR
-Sets the window gap value to \fIwidth\fR\.
+\fBgap_width\fR \fIPOSITION\fR \fIwidth\fR
+Sets the window gap at \fIPOSITION\fR to \fIwidth\fR\. \fIPOSITION\fR can be equal to \fBall\fR to set all gaps to \fIPOSITION\fR\.
+.
+.TP
+\fBgrid_gap_width\fR \fIwidth\fR
+Sets the window gap value used in virtual grids to \fIwidth\fR\.
 .
 .TP
 \fBcursor_position\fR \fIPOSITION\fR
-Sets the position of the cursor when moving or resizing windows\. Possible values for \fIpos\fR are:
+Sets the position of the cursor when moving or resizing windows\.
 .
 .TP
 \fBgroups_nr\fR \fInr\fR
@@ -319,7 +383,7 @@ Sets the number of groups to \fInr\fR\. If \fInr\fR is less than the current num
 Enable sloppy focus\.
 .
 .SH &quot;SEE ALSO&quot;
-windowchef(1), sxhkd(1)
+windowchef(1), sxhkd(1), wmutils(1), pfw(1), lsw(1)
 .
 .SH &quot;AUTHOR&quot;
 Tudor Roman \fB&lt;tudurom at gmail dot com&gt;\fR
