--- a/git/windowchef/refs.html
+++ b/git/windowchef/refs.html
@@ -19,7 +19,13 @@
 <tr><td>Name</td><td>Last commit date</td><td>Author</td>
 </tr>
 </thead><tbody>
-<tr><td>master</td><td>2016-09-19 16:36</td><td>Tudor</td></tr>
+<tr><td>master</td><td>2016-10-07 17:43</td><td>Tudor Roman</td></tr>
+</tbody></table><br/><h2>Tags</h2><table id="tags"><thead>
+<tr><td>Name</td><td>Last commit date</td><td>Author</td>
+</tr>
+</thead><tbody>
+<tr><td>v0.1</td><td>2016-09-29 18:20</td><td>Tudor Roman</td></tr>
+<tr><td>v0.1.1</td><td>2016-09-29 18:41</td><td>Tudor Roman</td></tr>
 </tbody></table><br/></div>
 </body>
 </html>
