--- a/whoami/index.html
+++ b/whoami/index.html
@@ -66,7 +66,7 @@ from this website. I also have a <a href="/blog">blog</a>.</p>
 <li><a href="https://github.com/gnotclub/albumify-next">albumify</a></li>
 </ul>
 
-<h3>People, friends and inspirational sites</h3>
+<h3>People and inspirational sites</h3>
 
 <div id="people"></div>
 
@@ -76,6 +76,7 @@ from this website. I also have a <a href="/blog">blog</a>.</p>
 <li><a href="https://pluvi.us/">apk</a></li>
 <li><a href="http://arcetera.moe/">arc</a> (RIP domain)</li>
 <li><a href="https://lyngvaer.no/">dcat</a></li>
+<li><a href="https://robots.thoughtbot.com/">Thoughtbot blog</a></li>
 <li><a href="http://neeasade.net/">neeasade</a></li>
 <li><a href="http://rocx.rocks/">rocx</a></li>
 <li><a href="http://suckless.org/">suckless</a></li>
